# fabm

./: .gitignore  .gitmodules
src/: CMakeLists.txt
src/models/imr/: CMakeLists.txt  imr_model_library.F90  imr_norwecom.F90  norwecom_num.F90  norwecom_num.fpp  setup_num.fypp
src/models/imr/imr_norwecom/: imr_norwecom.F90
src/models/imr/norwecom/: norwecom.F90
